# morecat

./: .gitignore  AGENTS.md  README.md  build.gradle  flake.nix  pom.xml  settings.gradle
.agents/skills/triage-pr-reviews/: SKILL.md
.claude/commands/: triage-pr-reviews.md
.codex/commands/: triage-pr-reviews.md
.github/workflows/: ci.yml  codeql-analysis.yml  codex-review.yml  rmu-ci.yml
.spec-workflow/approvals/cms/: approval_1765514389679_de139fgez.json  approval_1765514870718_exhlarife.json  approval_1765515336376_m7ms13ahp.json
.spec-workflow/specs/cms/: design.md  requirements.md  tasks.md
apps/api/: .scalafmt.conf  build.sbt  firebase.json
apps/api/bootstrap/: README.md
apps/api/domain/: README.md
apps/api/project/: plugins.sbt
apps/fixtures/: article-event-stream.json
apps/rmu/: Cargo.toml  README.md
apps/rmu/src/: bootstrap.rs  eventarc.rs  firestore_stream.rs  lib.rs  main.rs  postgres.rs  processor.rs  projection.rs  replay.rs
apps/rmu/tests/: entrypoint.rs
apps/rmu/tests/fixtures/: firestore-document-created.json
apps/ui/: README.md  openapi.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
docker/db/: Dockerfile  pg_hba.conf  setup.sh
docs/: architecture.html  design.md  slice-1-plan.md
gradle/wrapper/: gradle-wrapper.properties
morecat-admin-web/: build.gradle  pom.xml
morecat-api/: README.md  build.gradle  pom.xml
morecat-api/docker/: .env.template  docker-compose.yml
services/api/: .scalafix.conf  .scalafmt.conf  build.sbt
services/api/project/: Dependencies.scala  plugins.sbt
(+210 files in other folders)
