[package]
name = "morecat-rmu"
version = "0.1.0"
edition = "2024"
publish = false

[features]
firestore-integration = []

[dependencies]
async-trait = "0.1.89"
axum = "0.8.9"
firestore = "0.49.0"
futures = "0.3.32"
gcloud-sdk = "0.30.1"
mime = "0.3.17"
prost = "0.14.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread"] }
uuid = "1.23.5"

[dev-dependencies]
base64 = "0.22.1"
tower = { version = "0.5.3", features = ["util"] }
